--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+
     <script src="https://use.fontawesome.com/d4a95c96f2.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -26,7 +28,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="todos"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
